fixed logs alignment problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -457,6 +457,9 @@ footer {
 .logs-text-area {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
   min-height: 20em; 
   overflow: auto;
   background: var(--light-color);
